modify url links

--- a/_config.yml
+++ b/_config.yml
@@ -21,14 +21,14 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Jackson Kek"
 description              : ""
-url                      : "https://jacksonkek.github.io"
+url                      : "https://jacksoncakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "JacksonCakes/jacksonkek.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : 
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
-words_per_minute         : 250
+words_per_minute         : 200
 comments:
   provider               : # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
   disqus:
